fix(sidepanel): Overflow issue on content div

--- a/src/components/sidepanel/sidepanel.module.css
+++ b/src/components/sidepanel/sidepanel.module.css
@@ -2,8 +2,10 @@
   position: fixed;
   top: 0;
   bottom: 0;
-  display: flex;
-  flex-direction: column;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: max-content 1fr max-content;
   gap: var(--size-400);
   width: 400px;
   max-width: 100vw;
@@ -46,7 +48,7 @@
     width: 640px;
   }
 
-  &.large {
+  &.x-large {
     width: 768px;
   }
 
@@ -58,6 +60,10 @@
 
   .title {
     font-size: var(--type-600);
+  }
+
+  .content {
+    overflow: auto;
   }
 
   .footer {
